--- a/views/usersList.ejs
+++ b/views/usersList.ejs
@@ -5,63 +5,71 @@
     <%- include("partials/header.ejs") %>
 
     <main class="content">
-          
-        <%- include("partials/navbarAdmin") %>
 
-            <div class="admin__content">
+        <div class="dashboard__content__main">
+
+            <div class="admin__options">
                 
-                <!-- form handling -->
-                    <table class="table">
-                        <thead class="thead-dark">
-                            <tr>
-                                <th>ID</th>
-                                <th>Foto</th>
-                                <th>Name</th>
-                                <th>Email</th>
-                                <th>cargo</th>
-                                <th>Action</th>
-                            </tr>
-                        </thead>
-                        <% users.forEach(user => { %>
-                        <tbody>
-                            <tr>
-                                <td><%= user.id %></td> 
-                                <td><img class="img-users" src="/assets/male-user-shadow-svgrepo-com.svg" alt=""></td>
-                                <td><%= user.name %></td>
-                                <td><%= user.email %></td>
+                <%- include("partials/navbarAdmin") %>
 
-                                <% if (user.provider === 0) { %>
-                                    <td>Usuário</td>
-                                <% } %>
-
-                                <% if (user.provider === 1) { %>
-                                    <td>Subadministrador</td>
-                                <% } %>
-
-                                <% if (user.provider === 2) { %>
-                                    <td>Administrador</td>
-                                <% } %>
-    
-                                <td>
-                                    <a href="/admin/dashboard/users/edit/<%= user.id %>"><img class="img-users" src="/assets/pencil-striped.svg" alt=""></a>
-                                    <form action="/admin/dashboard/users/soft/<%= user.id %>" method="post">
-                                        <input type="image" src="/assets/lixeira.svg" class="img-users">
-                                    </form>
-                                </td>
-    
-                                <div class="pagination">
-                                    <a href="/admin/dashboard/users/<%= count_articles %>" class="next">Next</a>
-                                </div>
-                                
-                            </tr>
-                        </tbody>
-                        <% }) %>
-
-                    </table>
-                    <button class="load-more">Carregar mais</button>
-                    <div class="no-more">Sem mais usuários :(</div>
+                <div class="admin__content">
+                        
+                        <!-- form handling -->
+                            <table class="table">
+                                <thead class="thead-dark">
+                                    <tr>
+                                        <th>ID</th>
+                                        <th>Foto</th>
+                                        <th>Name</th>
+                                        <th>Email</th>
+                                        <th>cargo</th>
+                                        <th>Action</th>
+                                    </tr>
+                                </thead>
+                                <% users.forEach(user => { %>
+                                <tbody>
+                                    <tr>
+                                        <td><%= user.id %></td> 
+                                        <td><img class="img-users" src="/assets/male-user-shadow-svgrepo-com.svg" alt=""></td>
+                                        <td><%= user.name %></td>
+                                        <td><%= user.email %></td>
+        
+                                        <% if (user.provider === 0) { %>
+                                            <td>Usuário</td>
+                                        <% } %>
+        
+                                        <% if (user.provider === 1) { %>
+                                            <td>Subadministrador</td>
+                                        <% } %>
+        
+                                        <% if (user.provider === 2) { %>
+                                            <td>Administrador</td>
+                                        <% } %>
+            
+                                        <td>
+                                            <a href="/admin/dashboard/users/edit/<%= user.id %>"><img class="img-users" src="/assets/pencil-striped.svg" alt=""></a>
+                                            <form action="/admin/dashboard/users/soft/<%= user.id %>" method="post">
+                                                <input type="image" src="/assets/lixeira.svg" class="img-users">
+                                            </form>
+                                        </td>
+            
+                                        <div class="pagination">
+                                            <a href="/admin/dashboard/users/<%= count_articles %>" class="next">Next</a>
+                                        </div>
+                                        
+                                    </tr>
+                                </tbody>
+                                <% }) %>
+        
+                            </table>
+                            <button class="load-more">Carregar mais</button>
+                            <div class="no-more">Sem mais usuários :(</div>
+        
+                </div>
 
             </div>
+
+        </div>
 
     </main>
     
