--- a/views/category2One.ejs
+++ b/views/category2One.ejs
@@ -5,40 +5,47 @@
     <%- include("partials/headerAlternativo.ejs") %>
 
     <main class="content">
-    
-        <!--Principal-->
-    <div class="wrapper">
-        <!--Itens-->
-        <!--vai ter um for each e pra cada "block" um titulo, foto, descrição-->
-      
 
+        <div class="articleCategory__content__section">
 
-        <% articles.forEach(article => { %>
-            <div class="block">
-               
-                <div class="block-img">
-                    <img src="/assets/img-test/copos-coloridos.jpg" alt="HTML5">
-                </div>
-                <div class="block-desc">
-                    <h2><%= article.title %></h2>
-                    <p><%= article.description_home  %></p>
-                </div>
-                <div class="block-link">
-                    <a href="/article/<%= article.slug %>">Ver mais</a>
-                </div>
+            <div class="ac__content__header">
+                <h1>Aqui você encontra a lista das experiências de ciências da categoria: </h1>
             </div>
 
-            <div class="pagination">
-                <a href="/category2/<%= slug %>/<%= count_articles %>" class="next">Next</a>
+            <div class="ac__content__body">
+
+                <div class="wrapper">
+
+                    <% articles.forEach(article => { %>
+                        <div class="block">
+                           
+                            <div class="block-img">
+                                <img src="/assets/img-test/copos-coloridos.jpg" alt="HTML5">
+                            </div>
+                            <div class="block-desc">
+                                <h2><%= article.title %></h2>
+                                <p><%= article.description_home  %></p>
+                            </div>
+                            <div class="block-link">
+                                <a href="/article/<%= article.slug %>">Ver mais</a>
+                            </div>
+                        </div>
+            
+                        <div class="pagination">
+                            <a href="/category2/<%= slug %>/<%= count_articles %>" class="next">Next</a>
+                        </div>
+                    <% }) %>
+            
+                    <button class="load-more">Carregar mais</button>
+                    <div class="no-more">Sem mais artigos :(</div>
+            
+                                
+                    <!--Termina Itens-->
+                </div>
+                
             </div>
-        <% }) %>
 
-        <button class="load-more">Carregar mais</button>
-        <div class="no-more">Sem mais artigos :(</div>
-
-                    
-        <!--Termina Itens-->
-    </div>
+        </div>
        
     </main>
 
