--- a/views/partials/head.ejs
+++ b/views/partials/head.ejs
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@300&family=Poppins:wght@300&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="/css/users.css">
+    <link rel="stylesheet" href="/css/dashboardList.css">
     <link rel="stylesheet" href="/css/myprofile.css">
     <link rel="stylesheet" href="/css/dashboard.css">
     <link rel="stylesheet" href="/css/partials/header.css">
@@ -16,5 +16,6 @@
     <link rel="stylesheet" href="/css/articleOne.css">
     <link rel="stylesheet" href="/css/articlePage.css">
     <link rel="stylesheet" href="/css/userProfile.css">
+    <link rel="stylesheet" href="/css/articleCategory.css">
     <title>main</title>
 </head>
