--- a/public/css/dashboard.css
+++ b/public/css/dashboard.css
@@ -12,8 +12,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    border: 1px solid #ddd;
-    margin: 1rem 0rem;
+    border-bottom: 1px solid #ddd;
 }
 
 .admin__options {
